# awf-more

./: awf.desktop  awf.gresource.xml  awf.ui  compile_commands.json  meson.build
.cache/clangd/index/: awf.c.7525C2E5A1CC3DB1.idx
src/: awf.c  awf.pot
src/po/: fr.po
